--- a/package.json
+++ b/package.json
@@ -1,9 +1,26 @@
 {
+  "name": "snow-discord-bot",
+  "version": "1.0.0",
+  "description": "A simple Discord bot for testing purposes",
+  "main": "app.js",
+  "type": "module",
+  "engines": {
+    "node": "18.x"
+  },
+  "scripts": {
+    "start": "node app.js",
+    "register": "node commands.js",
+    "dev": "nodemon app.js"
+  },
+  "author": "Raine Gardner",
+  "license": "Apache-2.0",
   "dependencies": {
-    "discord-interactions": "^3.4.0",
-    "discord.js": "^14.12.1",
-    "dotenv": "^16.3.1",
+    "discord-interactions": "^3.2.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
