--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "A simple Discord bot for testing purposes",
   "main": "app.js",
-  "type": "module",
+  "type": "commonjs",
   "engines": {
     "node": "18.x"
   },
@@ -16,6 +16,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "discord-interactions": "^3.2.0",
+    "discord.js": "^14.16.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "node-fetch": "^3.3.0"
